# languageDevelopment

./: .gitignore  README.MD  README.md  go.mod  go.sum  main.go  pongo
01_CustomLanguageTranspiler/: Generator.rb  Nodes.rb  Parser.rb  Tokenizer.rb
02_RecursiveDescentParser/src/: Factories.js  Parser.js  Spec.js  Tokenizer.js
02_RecursiveDescentParser/tests/: literal_test.js  run.js
04_EvaLang/: README.md
04_EvaLang/src/: Environment.js  Eva.js
04_EvaLang/test/: Test.js
05_EvaLangVM/: CMakeLists.txt
05_EvaLangVM/src/: includes.h  main.cpp
05_EvaLangVM/src/bytecode/: OpCode.h
05_EvaLangVM/src/compiler/: EvaCompiler.cpp  EvaCompiler.h
05_EvaLangVM/src/parser/: EvaParser.h
05_EvaLangVM/src/vm/: EvaVM.cpp  EvaVM.h  EvaValue.cpp  EvaValue.h  EvaValues.h  Logger.h  OpCode.h  includes.h
06_EvaLangTypeChecker/src/: EvaTC.rb  Type.rb  TypeEnvironment.rb
06_EvaLangTypeChecker/tests/: math_test.rb  numbers_test.rb  run_tests.rb  strings_test.rb  test.rb  variable_test.rb
07_EvaLLVM/: main.cpp  run.sh
07_EvaLLVM/src/: Environment.h  EvaLLVM.h  includes.h
08_LoxLanguage/: README.md
09_LoxLanguageCompiler/: CMakeLists.txt
09_LoxLanguageCompiler/src/: chunk.c  compiler.c  debug.c  main.c  memory.c  scanner.c  value.c  vm.c
09_LoxLanguageCompiler/src/headers/: chunk.h  common.h  compiler.h  memory.h  scanner.h  value.h  vm.h
10_SchemeInterpreter/scheme-interpreter/: package.yaml  scheme-interpreter.cabal
AileenInterpreter/: Aileen.js  Env.js  ail.js  aileenParser.js  aileen_grammar.bnf  package-lock.json  package.json  test.aileen
AileenInterpreter/tests/: AileenTests.js  aileenTests.js  booleanTests.js  builtInFunctionsTests.js  classTests.js  conditionTests.js  functionTests.js  lambdaTests.js  loadTests.js  loopTests.js  moduleTests.js  runTestFunction.js  sectionTests.js  switchTests.js  variableTests.js
EvaVM/: EvaVM.h  eva-vm.cpp
EvaVM/bytecode/: OpCode.h
EvaVM/vm/: EvaVM.h
bird_simulation/: go.mod  main.go  vector.go
concurrency/: bird.go  main.go  vector.go
file_search/: go.mod  main.go
gogo_ast/: ast.go  ast_test.go
gogo_lexer/: gogo_lexer.go  gogo_lexer_test.go  lexer_test.go
gogo_parser/: parser.go  parser_test.go
gogo_repl/: repl.go
gogo_token/: gogo_token.go  token.go
http_practice/: Makefile  docker-compose.yml  go.mod  main.go  main_test.go
http_practice/authentication-service/: authentication-service.dockerfile  go.mod  go.sum
http_practice/broker_service/: broker_service.dockerfile  go.mod
interpreterDS/: Env.js  Eva.js  evaParser.js  eva_grammar.bnf  package-lock.json  package.json
interpreterDS/tests/: Eva_test.js
lispC/: Makefile  parser.c
manager/: manager.go
matrix/: main.go
monkeyLang/: go.mod
monkeyLang/ast/: ast.go  (+1 more)
server/: go.mod  main.go
task/: task.go
task_1/: go.mod  reverse.go  stringutils_test.go
thread_pools/: go.mod  main.go  shoelace.go
token/: token.go
worker/: worker.go
(+127 files in other folders)
